# ZYNQ-based-acoustic-camera

Arm端重要代码/: display_ctrl_hdmi.c  emio_sccb_cfg.c  emio_sccb_cfg.h  main.c  ov5640_init.c  ov5640_init.h  vdma_api.c
FPGA重要代码/: buffer_ctrl.v  sensors.v  vram_ctrl.v
HLS与Vivado工程/hls/calculate/.wsdata/: clang_dir_map.json
HLS与Vivado工程/hls/calculate/hls_component/: compile_commands.json  hls_config.cfg  vitis-comp.json
HLS与Vivado工程/hls/calculate/src/: calculate.cpp  calculate.h  tb_calculate.cpp
HLS与Vivado工程/hls/delay/.wsdata/: clang_dir_map.json
HLS与Vivado工程/hls/delay/hls_component/: compile_commands.json  hls_config.cfg  vitis-comp.json
HLS与Vivado工程/hls/delay/src/: delay.cpp  delay.h  rom_init.m  tb_delay.cpp
HLS与Vivado工程/hls/inter/.wsdata/: clang_dir_map.json
HLS与Vivado工程/hls/inter/hls_component/: compile_commands.json  hls_config.cfg  vitis-comp.json
HLS与Vivado工程/prj/: hs_err_pid10444.dmp  ov5640_hdmi.xpr  system_wrapper.xsa  vivado.jou  vivado_10444.backup.jou  vivado_27860.backup.jou  vivado_pid10444.str  vivado_pid27860.str  vivado_pid28936.str
HLS与Vivado工程/vitis/: system_wrapper.xsa
HLS与Vivado工程/vitis/app_component/: compile_commands.json  vitis-comp.json
HLS与Vivado工程/vitis/platform/: vitis-comp.json
HLS与Vivado工程/vitis/platform/zynq_fsbl/zynq_fsbl_bsp/hw_artifacts/drivers/add_image_v1_0/src/: CMakeLists.txt
HLS重要代码/alpha_add/: README.txt  add_image.cpp  add_image.h
HLS重要代码/calculate/: README.txt  calculate.cpp  calculate.h  tb_calculate.cpp
HLS重要代码/color_mapping/: README.txt  color_mapping.cpp  color_mapping.h  color_mapping_tb.cpp
HLS重要代码/delay/: README.txt  delay.cpp  delay.h  tb_delay.cpp
HLS重要代码/inter/: README.txt  tb_inter.cpp
HLS重要代码/pixel_mapping/: README.txt  pixel_mapping.cpp  pixel_mapping.h  pixel_mapping_tb.cpp
Qt上位机程序/serial_help/: CMakeLists.txt  ColorSlider.cpp  ColorSlider.h  RangeSlider.cpp  RangeSlider.h  main.cpp  window.cpp  window.h
(+1472 files in other folders)
